made the tasks editable with a doubleckick and solved the bug of too long task not being displayed correcly

--- a/style.css
+++ b/style.css
@@ -131,3 +131,10 @@ ul {
 .remove-li{
     display: none;
 }
+
+li span {
+    word-break: break-word;
+    overflow-wrap: break-word;
+    display: inline-block;
+    max-width: 85%;
+}
